--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,10 @@ services:
   - type: web
     name: flask-app
     env: python
-    buildCommand: pip install -r requirements.txt
+    buildCommand: |
+      apt-get update
+      apt-get install -y build-essential python3-dev
+      pip install -r requirements.txt
     startCommand: gunicorn app:app
     envVars:
       - key: FLASK_ENV
