--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ Flask==2.0.2
 apscheduler==3.8.1
 pandas==1.3.3
 prophet==1.0
-numpy==1.21.0
+numpy==1.21.0 --only-binary :all:
 scipy==1.7.3
-pystan==2.19.1.1 
-matplotlib==3.4.3 
+pystan==2.19.1.1
+matplotlib==3.4.3
 scikit-learn==0.24.2
-gunicorn
+gunicorn==20.1.0
